--- a/style.css
+++ b/style.css
@@ -78,7 +78,6 @@ body{
     gap: 1px;
     background-color: rgb(255, 255, 255);
     padding: 1px;
-    display: flex;
     flex-direction: column;
     margin:0;
     
@@ -141,4 +140,25 @@ h2 {
   color: #050A30;
   font-family: sans-serif;
   text-shadow: 1px 3px #00000064;
+}
+
+.products{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+img {
+  max-width: 400px;
+  max-height: 250px;
+  border-radius: 8px;
+  margin: 20px;
+  cursor: pointer;
+}
+
+
+.no-voting {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
